feat(ayokoding-web): rename java-spring-boot to jvm-spring-boot with Kotlin examples
BREAKING CHANGE: Directory renamed from java-spring-boot to jvm-spring-boot

Changes:
- Renamed directory: java-spring-boot → jvm-spring-boot
- Updated all navigation links and references
- Updated titles to "JVM Spring Boot" (Java + Kotlin)
- Added Kotlin code examples to all 85 examples:
  * beginner.md: 25/25 examples with Kotlin
  * intermediate.md: 30/30 examples with Kotlin
  * advanced.md: 30/30 examples with Kotlin

Kotlin features demonstrated:
- Primary constructor injection (no @Autowired)
- Data classes for DTOs
- Null safety operators (?, ?., ?:, !!)
- String templates
- Extension functions and scope functions
- When expressions
- Sealed classes
- Companion objects
- Coroutines as reactive alternatives
- Operator overloading
- And many more idiomatic Kotlin patterns

Quality standards:
- 1-2.25 comments per code line ratio maintained
- Idiomatic Kotlin (not Java-to-Kotlin translation)
- Production-ready patterns
- Comprehensive annotations explaining Kotlin-specific features

All examples now support both Java and Kotlin implementations,
providing developers choice of JVM language while learning Spring Boot.